app/timeoff-management.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeoff-management
  namespace: app
spec:
  selector:
    matchLabels:
      app: timeoff-management
  template:
    metadata:
      labels:
        app: timeoff-management
    spec:
      # Constraint: the replicas should be preferably spread out across
      # different zones
      topologySpreadConstraints:
        - maxSkew: 1
          whenUnsatisfiable: ScheduleAnyway
          topologyKey: zone
          labelSelector:
            matchLabels:
              app: timeoff-management
      #
      containers:
        - name: timeoff-management
          image: luongdang/morningstar-timeoff-management:1.4.3
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: timeoff-management
  namespace: app
spec:
  selector:
    app: timeoff-management
  ports:
    - port: 3000
